vercel.json תקין - מוכן לפרסום
 vercel.json עם הגדרות static deployment
✅ requirements.txt הועבר לbackend
✅ environment.js מוכן
 הכל מוכן לפרסום ב-Vercel!

--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "web/**/*",
+      "src": "web/**",
       "use": "@vercel/static"
-    },
-    {
-      "src": "backend/**/*.py",
-      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/backend/$1.py"
-    },
-    {
       "src": "/(.*)",
       "dest": "/web/$1"
     }
-  ],
-  "outputDirectory": "web"
+  ]
 }
